<?xml version="1.0" encoding="utf-8"?>
<!-- Root LinearLayout that serves as the main container for this layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark"
    android:padding="16dp">

    <!-- Cross Button to go back to the main menu -->
    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="@null"
        android:contentDescription="Close"
        android:layout_gravity="end" />

    <!-- For picking time -->
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:timePickerMode="spinner" 
        style="@style/CustomButtonLightStyle"/>

    <!-- TextView label for "Nombre" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre:"
        android:layout_marginTop="0dp"
        style="@style/CustomTextLightStyle" />

    <!-- EditText for inputting alarm name -->
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre Alarma"
        android:gravity="start|center_vertical"
        android:layout_marginTop="0dp"
        android:textColorHint="@color/grey"
        style="@style/CustomInputStyle" />

    <!-- Layout for Periodicidad -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <!-- TextView label for "Periodicidad" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Periodicidad:"
            style="@style/CustomTextLightStyle" />

        <!-- Spinner for selecting periodicity -->
        <Spinner
            android:id="@+id/periodicidadTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/CustomSpinnerStyle" />
    </LinearLayout>

    <!-- Layout for Tipo de problema -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <!-- TextView label for problems -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Desafío:"
            style="@style/CustomTextLightStyle" />

        <!-- Spinner for selecting problems -->
        <Spinner
            android:id="@+id/problemaTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/CustomSpinnerStyle" />
    </LinearLayout>

    <!-- Button for confirming selections -->
    <Button
        android:id="@+id/buttonConfirmar"
        android:text="Confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        style="@style/CustomButtonLightStyle" />
</LinearLayout>