...
            android:scrollbars="vertical" />

    </LinearLayout>

    <!-- Button for creating an alarm, centered at the bottom -->
    <Button
        android:id="@+id/buttonCreateAlarm"
        style="@style/CustomButtonLightStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:text="Crear Alarma" />
...
